--- a/app/views/log_files/_form.html.erb
+++ b/app/views/log_files/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@log_file, html: { class: 'form-horizontal' },wrapper: :horizontal_form) do |f| %>
+<%= simple_form_for(@log_file, html: { class: 'form-horizontal search-form' },wrapper: :horizontal_form) do |f| %>
     <fieldset>
       <%= f.input :name, autofocus: true %>
       <%= f.input :description%>
