--- a/app/views/log_files/index.html.erb
+++ b/app/views/log_files/index.html.erb
@@ -3,38 +3,44 @@
     <div class="panel-heading"><span style="visibility: hidden;">Log files list</span></div>
     <div class="panel-body">
 
+      <% if can? :create, LogFile %>
 
-      <div class="panel panel-default">
-        <div class="panel-body">
+          <div class="panel panel-default">
+            <div class="panel-body">
 
-          <%= search_form_for(@search, html: { class: 'simple-form form-horizontal search-form' },wrapper: :horizontal_form) do |f| %>
-              <fieldset>
-                <%= f.input :name_cont, label:'Name', placeholder: 'enter file name' %>
-                <%= f.input :runtime_statistics_stats_cont, label: 'Statistics', placeholder: 'enter statistics' %>
-                <div class='form-group control-info'>
-                  <label class="col-sm-3 control-label">Access</label>
-                  <div class='form-actions form-options'>
-                      <%= f.collection_check_boxes :access_type_id_in, AccessType.all, :id, :name %>
-                  </div>
-                  <div class="button-holder">
-                    <%= button_tag(type: 'submit', class: 'btn btn-primary') do %>
-                        <i class='icon-search'></i> Search
-                    <% end %>
-                  </div>
-                </div>
-               </fieldset>
+              <%= search_form_for(@search, html: { class: 'simple-form form-horizontal search-form' },wrapper: :horizontal_form) do |f| %>
+                  <fieldset>
+                    <%= f.input :name_cont, label:'Name', placeholder: 'enter file name' %>
+                    <%= f.input :runtime_statistics_stats_cont, label: 'Statistics', placeholder: 'enter statistics' %>
+                    <div class='form-group control-info'>
+                      <label class="col-sm-3 control-label">Access</label>
+                      <div class='form-actions form-options'>
+                          <%= f.collection_check_boxes :access_type_id_in, AccessType.all, :id, :name %>
+                      </div>
+                      <div class="button-holder">
+                        <%= button_tag(type: 'submit', class: 'btn btn-primary') do %>
+                            <i class='icon-search'></i> Search
+                        <% end %>
+                      </div>
+                    </div>
+                   </fieldset>
+              <% end %>
+            </div>
+          </div>
+
+          <%= link_to new_log_file_path, class: 'btn btn-primary' do %>
+              <i class='icon-doc-add'></i> New Log File
           <% end %>
-        </div>
-      </div>
 
-      <%= link_to new_log_file_path, class: 'btn btn-primary' do %>
-          <i class='icon-doc-add'></i> New Log File
       <% end %>
 
     </div>
+
     <div class="panel-footer">
       <div class="row">
+      <% public_access_type_id = AccessType.find_by_name('public').id %>
       <% @log_files.each_with_index do |log_file, index| %>
+
           <% current_stats = get_index_view_runtime_stats(log_file.runtime_statistics.to_a.map(&:serializable_hash)) %>
           <div class="col-sm-6 col-md-4">
             <div class="panel panel-success">
@@ -50,8 +56,11 @@
                   </div>
                   <div class="caption">
                     <div>
-                      <%= link_to log_file, class: 'btn btn-success' do %>
-                          <i class='icon-list-alt'></i> Show
+                      <% #secirity filtering %>
+                      <% unless log_file.access_type_id != public_access_type_id and not user_signed_in?  %>
+                          <%= link_to log_file, class: 'btn btn-success' do %>
+                              <i class='icon-list-alt'></i> Show
+                          <% end %>
                       <% end %>
                     </div>
                   </div>
@@ -67,7 +76,7 @@
                  custom_delete_html += '<div>Name: ""' + "#{log_file.name}" + '""</div>'
                  custom_delete_html += '<div>' + "#{current_stats[:start_date]}" + '</div>'
               %>
-              <% if can? :manage, LogFile %>
+              <% if can? :manage, LogFile or log_file.user_id == current_user.id %>
                   <div class="panel-footer">
                     <%= link_to edit_log_file_path(log_file), class: 'btn btn-warning' do %>
                         <i class='icon-pencil'></i> Edit
