--- a/app/views/log_files/index.html.erb
+++ b/app/views/log_files/index.html.erb
@@ -38,8 +38,17 @@
 
     <div class="panel-footer">
       <div class="row">
-      <% public_access_type_id = AccessType.find_by_name('public').id %>
+      <%
+         public_access_type_id = get_access_type_id_by_name('public')
+        # private_access_type_id = get_access_type_id_by_name('private')
+      %>
       <% @log_files.each_with_index do |log_file, index| %>
+
+          <%
+             #if log_file.access_type_id == private_access_type_id and log_file.user_id != (current_user.nil? ? nil:current_user.id)
+              #  next
+             #end
+          %>
 
           <% current_stats = get_index_view_runtime_stats(log_file.runtime_statistics.to_a.map(&:serializable_hash)) %>
           <div class="col-sm-6 col-md-4">
@@ -57,7 +66,11 @@
                   <div class="caption">
                     <div>
                       <% #secirity filtering %>
-                      <% unless log_file.access_type_id != public_access_type_id and not user_signed_in?  %>
+                      <% if log_file.access_type_id != public_access_type_id and not user_signed_in?  %>
+                          <%= link_to log_file, class: 'btn btn-success disabled' do %>
+                              <i class='icon-list-alt'></i> Show
+                          <% end %>
+                      <% else %>
                           <%= link_to log_file, class: 'btn btn-success' do %>
                               <i class='icon-list-alt'></i> Show
                           <% end %>
@@ -76,7 +89,7 @@
                  custom_delete_html += '<div>Name: ""' + "#{log_file.name}" + '""</div>'
                  custom_delete_html += '<div>' + "#{current_stats[:start_date]}" + '</div>'
               %>
-              <% if can? :manage, LogFile or log_file.user_id == current_user.id %>
+              <% if can? :manage, LogFile or log_file.user_id == (current_user.nil? ? nil:current_user.id) %>
                   <div class="panel-footer">
                     <%= link_to edit_log_file_path(log_file), class: 'btn btn-warning' do %>
                         <i class='icon-pencil'></i> Edit
